--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,8 @@
 		<a href="/">Home</a>
         <a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>Da Blog</h1>
+
+        <p>Some thoughts about stuffs.</p>
 	</body>
 </html>
