--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,11 @@
         <a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 		<h1>Da Blog</h1>
-
         <p>Some thoughts about stuffs.</p>
+        <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+          </ul>
 	</body>
 </html>
